--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,40 @@
 html{
     background-color: aquamarine;
     margin: 0 auto;
+    font-size: 62.5%;
 }
+
+body{
+    font-size: 1.6rem;
+}
+
+.btn{
+    /* padding: 12px 16px; */
+    --btn-width: 50px;
+    width: var(--btn-width);
+    height: var(--btn-width);
+    text-align: center;
+    position: relative;
+    line-height: var(--btn-width);
+}
+
+.btn:hover{
+    cursor: pointer;
+}
+
+.btn-play{
+    background: #ec6060;
+    border-radius: 50%;
+}
+
+.btn-play i{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+
+/* Dashboard */
 
 #progress{
     width: 60%;
@@ -42,12 +75,20 @@ html{
     align-items: center;
     text-align: center;
     gap: 18px;
+    /* background: #ccc; */
+    background-image: linear-gradient(to bottom right, rgb(229, 152, 152), rgb(242, 242, 157));
+    padding: 12px;
+    position: sticky;
+    z-index: 1;
+    top: -280px;
+
 }
 
 .player__cd-thumb{
     width: 50%;
     height: 50%;
     margin: 0 auto;
+    position: relative;
 }
 
 .player__cd-img{
@@ -56,8 +97,75 @@ html{
     border-radius: 50%;
 }
 
+.player__cd-thumb::before{
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: #545151;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .player__control{
+    width: 100%;
     display: flex;
-    justify-content: center;
-    gap: 20px;
+    justify-content: space-evenly;
+}
+
+.player__status{
+    color: #ec6060;
+    margin-bottom: 8px;
+    font-size: 1.6rem;
+}
+
+.player__name {
+    font-size: 2.4rem;
+}
+
+/* playlist */
+
+.playlist{
+    display: flex;
+    flex-direction: column;
+    /* margin-top: 383px;   */
+    gap: 10px;
+    background: #f9f3f3;
+    width: 100%;
+    /* height: 100vh; */
+    padding: 12px
+}
+
+.playlist__item{
+    display: flex;
+    border-radius: 8px;
+    background: #fff;
+    padding: 4px;
+    flex-direction: row;
+    width: 100%;
+    gap: 10px;  
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+.playlist__item-thumb{
+    display: flex;
+    justify-items: center;
+}
+
+.playlist__item-img{
+    width: 80px ;
+    border-radius: 16px;
+    margin: auto 0;
+}
+
+.playlist__item-name{
+    font-size: 1.6rem;
+}
+
+.playlist__item-actors{
+    font-size: 12px;
+    font-weight: 300;
+    color: #ccc;
 }
